wip(codequality): preserve measures api draft
